--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ dist/*
 app/assets/css/*
 app/assets/scss/module/fontawesome/*
 johnathan-org/*
-johnatahn-org.zip
+johnathan-org.zip
 
 ### Node ###
 # Logs
