--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 dist/* 
-app/assets/fonts/fa-*
+app/assets/fonts/fontawesome
 app/assets/css/*
 app/assets/scss/module/fontawesome/*
 johnathan-org/*
