--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A ghost theme for johnathan.org",
   "version": "2.0.0",
   "license": "MIT",
-  "author": { 
+  "author": {
     "name": "Johnathan Lyman",
     "email": "email@johnathan.org",
     "url": "https://johnathan.org"
@@ -52,6 +52,7 @@
     "require-dir": "^0.3.2"
   },
   "dependencies": {
+    "purgecss": "^0.19.0",
     "run-sequence": "^2.2.0"
   }
 }
