--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ app/assets/css/maps/*
 app/assets/css/module/*
 app/assets/css/screen.css
 app/assets/scss/module/fontawesome/*
-johnathan-org/*
-johnathan-org.zip
+release/*
+release.zip
 
 ### Node ###
 # Logs
