--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "johnathan-org-theme",
   "description": "A WordPress theme for Johnathan.org",
-  "version": "1.9.1",
+  "version": "1.9.16",
   "license": "MIT",
   "author": {
     "name": "Johnathan Lyman",
@@ -52,6 +52,7 @@
     "require-dir": "^0.3.2"
   },
   "dependencies": {
+    "natives": "^1.1.3",
     "purgecss": "^0.19.0",
     "run-sequence": "^2.2.0"
   }
