--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "johnathan-org-theme",
   "description": "A WordPress theme for Johnathan.org",
-  "version": "5.0.0",
+  "version": "5.0.62",
   "license": "MIT",
   "author": {
     "name": "Johnathan Lyman",
@@ -23,6 +23,7 @@
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-append": "^0.3.4",
     "gulp-bump": "^3.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
@@ -33,6 +34,7 @@
     "gulp-gzip": "^1.4.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.0.0",
+    "gulp-inject": "^4.3.2",
     "gulp-newer": "^1.3.0",
     "gulp-postcss": "^7.0.0",
     "gulp-prompt": "^1.0.1",
